# HX-Resume

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  run.sh
.claude/skills/: beautify-github-readme
.github/workflows/: deploy-pages.yml  publish-containers.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  sync_config.json
backend/app/: main.py
backend/app/api/: auth.py  fonts.py  resumes.py  sync.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: font.py  resume.py
backend/app/schemas/: resume.py
backend/app/services/: git_sync_service.py  github_service.py  resume_service.py
docs/: DEVELOPMENT.md
frontend/: .dockerignore  .env.static  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AutoSaveIndicator.tsx  AvatarCropEditor.tsx  ErrorBoundary.tsx  Header.tsx  HeaderSection.tsx  InlineResumeField.tsx  LogoCropEditor.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  PagedPreview.tsx  RedactedPreview.tsx  ResumeList.tsx  ResumePreview.tsx  SelectionToolbar.tsx  SyncSettings.tsx  VersionDiffModal.tsx
frontend/src/contexts/: AuthContext.tsx  BackendSyncContext.tsx  auth-context-value.ts
frontend/src/hooks/: useAuth.ts  useBackendSync.ts  useCustomFonts.ts
frontend/src/pages/: AboutPage.tsx  EditorPage.tsx  HomePage.tsx  LoginPage.tsx
frontend/src/stores/: publicResumeStore.ts  resumeStore.ts  themeStore.ts
frontend/src/styles/: cyberpunk.css  resume-print.css
(+24 files in other folders)
